--- a/package.json
+++ b/package.json
@@ -1,44 +1,46 @@
 {
-  "name": "studium_backend",
-  "version": "1.0.0",
-  "description": "API REST para gestão de estudo - Node.js, Express e Prisma",
-  "main": "src/index.js",
-  "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
-    "prisma": "prisma",
-    "migrate": "prisma migrate dev --name init",
-    "seed": "node prisma/seed.js",
-    "compose:up": "docker-compose up -d",
-    "compose:down": "docker-compose down",
-    "check-db": "node scripts/check-db.js",
-    "generate": "prisma generate",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
-  "dependencies": {
-    "bcryptjs": "^3.0.3",
-    "body-parser": "^1.20.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.0",
-    "express": "^4.18.0",
-    "jsonwebtoken": "^9.0.3",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1",
-    "winston": "^3.18.3",
-    "winston-daily-rotate-file": "^5.0.0"
-  },
-  "devDependencies": {
-    "@prisma/client": "^7.2.0",
-    "@types/jest": "^30.0.0",
-    "jest": "^30.2.0",
-    "mysql2": "^3.15.3",
-    "nodemon": "^2.0.0",
-    "prisma": "^7.2.0",
-    "supertest": "^7.1.4"
-  }
+    "name": "studium_backend",
+    "version": "1.0.0",
+    "description": "API REST para gestão de estudo - Node.js, Express e Prisma",
+    "main": "src/index.js",
+    "scripts": {
+        "start": "node src/index.js",
+        "dev": "nodemon src/index.js",
+        "prisma": "prisma",
+        "migrate": "prisma migrate dev --name init",
+        "seed": "node prisma/seed.js",
+        "compose:up": "docker-compose up -d",
+        "compose:down": "docker-compose down",
+        "check-db": "node scripts/check-db.js",
+        "generate": "prisma generate",
+        "test": "jest",
+        "test:watch": "jest --watch",
+        "test:coverage": "jest --coverage"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "MIT",
+    "dependencies": {
+        "@prisma/adapter-mariadb": "^7.2.0",
+        "bcryptjs": "^3.0.3",
+        "body-parser": "^1.20.0",
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.0",
+        "express": "^4.18.0",
+        "jsonwebtoken": "^9.0.3",
+        "mariadb": "^3.4.5",
+        "swagger-jsdoc": "^6.2.8",
+        "swagger-ui-express": "^5.0.1",
+        "winston": "^3.18.3",
+        "winston-daily-rotate-file": "^5.0.0"
+    },
+    "devDependencies": {
+        "@prisma/client": "^7.2.0",
+        "@types/jest": "^30.0.0",
+        "jest": "^30.2.0",
+        "mysql2": "^3.16.0",
+        "nodemon": "^2.0.0",
+        "prisma": "^7.2.0",
+        "supertest": "^7.1.4"
+    }
 }
