fix(auth|prismaClient) fixed prisma client connection pool limit and multiple adapters instance error

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,18 +5,17 @@
 NODE_ENV=production
 
 # Porta da API
-PORT=3333
 API_PORT=3333
 
 # Configurações do MySQL
-MYSQL_ROOT_PASSWORD=SuaSenhaRootSuperSegura123!
-MYSQL_DATABASE=siga_db
-MYSQL_USER=siga_user
-MYSQL_PASSWORD=SenhaSuperSeguraDoUsuario456!
-MYSQL_PORT=3306
+DATABASE_HOST=mysql
+DATABASE_NAME=studium_db
+DATABASE_USER=studium_user
+DATABASE_PASSWORD=SenhaSuperSeguraDoUsuario456!
+DATABASE_PORT=3306
 
 # URL de Conexão do Banco (será montada automaticamente)
-DATABASE_URL=mysql://siga_user:SenhaSuperSeguraDoUsuario456!@mysql:3306/siga_db
+DATABASE_URL=mysql://studium_user:SenhaSuperSeguraDoUsuario456!@mysql:3306/studium_db
 
 # JWT Configuration
 JWT_SECRET=seu-jwt-secret-super-seguro-com-pelo-menos-32-caracteres-aleatorios
@@ -29,4 +28,4 @@ LOG_MAX_SIZE=10485760
 LOG_MAX_FILES=10
 
 # Timezone
-TZ=America/Fortaleza
+TZ=America/Manaus
