refact(.env) removed

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,1 +1,2 @@
-VITE_API_URL=http://localhost:3000/api
+STUDIUM_BACKEND_API_URL=http://backendapi:3333/api
+STUDIUM_BACKEND_API_USUARIO_ENDPOINT=/usuario
