--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,13 @@
 STUDIUM_BACKEND_API_URL=http://backendapi:3333/api
 STUDIUM_BACKEND_API_USUARIO_ENDPOINT=/usuario
+
+# Configurações da Aplicação
+VITE_API_BASE_URL=http://localhost:3000/api
+
+# Build Info (preenchido automaticamente no CI/CD)
+# VITE_BUILD_TIMESTAMP=2026-01-30T12:00:00.000Z
+# VITE_COMMIT_HASH=abc123def456
+
+# Features
+# VITE_ENABLE_ANALYTICS=false
+# VITE_ENABLE_DEBUG_TOOLS=true
